# Face_Client_Server

Face_Client1.2/: CMakeLists.txt  client.sh  readme.txt
Face_Client1.2/src/: CMakeLists.txt  client_basic.cpp  codec.h  data.pb.cc  face_detect.h
Face_Server1.5/: readme.txt  server.sh
Face_Server1.5/src/: .wcdCFacerecognize.h.swo  CMakeLists.txt  ExtractFeature.cpp  ExtractFeature.h  Face_server.cpp  FindMySQL.cmake  MyDB.cpp  MyDB.h  codec.cpp  data.pb.h  data.proto  facerecognize.cpp  facerecognize.h  wcdCFacerecognize.cpp  wcdCFacerecognize.h
